# claude-dingtalk-bridge

./: .gitignore  CLAUDE.md  Makefile  README.md  README.zh.md  config.example.yaml  pyproject.toml
scripts/: check_bash_permissions.py  coverage_isolated.py  log_server.py  sync_config.py
src/claude_dingtalk_bridge/: __init__.py  __main__.py  chunking.py  claude_runner.py  cli.py  commands.py  config.py  connectivity.py  daemon.py  dingtalk.py  display.py  geo.py  images.py  launchd.py  log_context.py  orchestrator.py  permission_hooks.py  permissions.py  projects.py  questions.py  self_update.py  sessions.py  stream_reconnect.py
src/claude_dingtalk_bridge/resources/: AppHelper.swift
tests/: conftest.py  test_chunking.py  test_claude_runner.py  test_cli.py  test_commands.py  test_config.py  test_connectivity.py  test_daemon.py  test_dingtalk.py  test_display.py  test_geo.py  test_images.py  test_launchd.py  test_log_context.py  test_log_server_render.py  test_main.py  test_orchestrator.py  test_permission_hooks.py  test_permission_settings.py  test_permissions.py  test_projects.py  test_questions.py  test_self_update.py  test_sessions.py  test_stream_reconnect.py
