[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-dingtalk-bridge"
version = "0.3.1"
description = "Drive Claude Code remotely from a phone via DingTalk Stream mode"
requires-python = ">=3.10"
dependencies = [
    "bashlex>=0.18",
    "claude-agent-sdk>=0.2.87",
    "dingtalk-stream>=0.24.3",
    "PyYAML>=6.0",
    "requests>=2.34",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=1.3", "pytest-cov>=7.0"]

[project.scripts]
claude-dingtalk-bridge = "claude_dingtalk_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dingtalk_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["claude_dingtalk_bridge"]
branch = true

[tool.coverage.report]
show_missing = true
